--- a/bio_page1.html
+++ b/bio_page1.html
@@ -40,14 +40,14 @@
             </div>
             <div class="image1">
                 <img src="http://www.vggallery.com/painting/f_0001.jpg">
-                <h4>Το πρώτο του έργο,Still Life with Cabbage and Clogs(1881)</h4>
+                <h5>Το πρώτο του έργο,Still Life with Cabbage and Clogs(1881)</h5>
             </div>
         </div>
 
         <div class="early">
             <div class="early_img">
                 <img src="http://www.vggallery.com/drawings/f_1072.jpg">
-                <h4>Sien, Sitting on a Basket, with a Girl(1883)</h4>
+                <h5>Sien, Sitting on a Basket, with a Girl(1883)</h5>
             </div>
 
             <div class="early_txt">
@@ -57,13 +57,13 @@
                     Ο Tralbaut προτείνει μια σύντομη και ασυνήθιστη θητεία στο σχολείο, ενώ ο Hulsker υποστηρίζει ότι η αίτηση του Vincent για εισαγωγή δεν έγινε ποτέ αποδεκτή. Όποια κι αν ήταν η περίπτωση,
                     ο Vincent συνέχισε μόνος του τα μαθήματα σχεδίου, παίρνοντας παραδείγματα από βιβλία όπως το Travaux des champs του Jean-François Millet και το Cours de dessin του Charles Bargue.
                     Το καλοκαίρι ο Βίνσεντ ζούσε ξανά με τους γονείς του, που τώρα βρίσκονται στο Etten, και κατά τη διάρκεια αυτής της περιόδου γνώρισε την ξαδέρφη του Cornelia Adriana Vos-Stricker (Kee).
-                    Η Kee (1846-1918) είχε μείνει πρόσφατα χήρα και μεγάλωνε μόνη της έναν μικρό γιο. Ο Vincent ερωτεύτηκε την Kee και συντετριμμένος όταν εκείνη απέρριψε τις προτάσεις του. Το ατυχές επεισόδιο ολοκληρώθηκε
-                    με ένα από τα πιο αξιομνημόνευτα περιστατικά στη ζωή του Βαν Γκογκ. 
+                    Η Kee (1846-1918) είχε μείνει πρόσφατα χήρα και μεγάλωνε μόνη της έναν μικρό γιο. Ο Vincent ερωτεύτηκε την Kee και έμεινε συντετριμμένος όταν εκείνη απέρριψε τις προτάσεις του. Το ατυχές επεισόδιο ολοκληρώθηκε
+                    σαν από τα πιο αξιομνημόνευτα περιστατικά στη ζωή του Βαν Γκογκ. 
                 </p>
 
                 <p>Ο Βίνσεντ βαν Γκογκ συνάντησε την Clasina Maria Hoornik (1850-1904) στα τέλη Φεβρουαρίου 1882, στη Χάγη. Ήδη έγκυος στο δεύτερο παιδί της όταν τη γνώρισε ο Βαν Γκογκ, αυτή η γυναίκα, γνωστή ως «Σιέν»,
                     μετακόμισε με τον Βίνσεντ λίγο αργότερα. Ο Βίνσεντ έζησε με τη Σιέν τον επόμενο ενάμιση χρόνο. Η σχέση τους ήταν θυελλώδης, εν μέρει λόγω της ευμετάβλητης προσωπικότητάς τους και λόγω της πίεσης να ζουν σε πλήρη φτώχεια.
-                    Τα γράμματα του Vincent στον Theo τον δείχνουν ότι είναι αφοσιωμένος στη Sien και ιδιαίτερα στα παιδιά της, αλλά η τέχνη του ήταν πάντα το πρώτο του πάθος--αποκλείοντας όλες τις άλλες ανησυχίες, συμπεριλαμβανομένου του φαγητού.
+                    Τα γράμματα του Vincent στον Theo τον δείχνουν ότι είναι αφοσιωμένος στη Sien και ιδιαίτερα στα παιδιά της, αλλά η τέχνη του ήταν πάντα το πρώτο του πάθος.
                     Η Sien και τα παιδιά της πόζαραν για δεκάδες σχέδια για τον Vincent και τα ταλέντα του ως καλλιτέχνη αυξήθηκαν σημαντικά κατά τη διάρκεια αυτής της περιόδου. Τα πρώτα, πιο πρωτόγονα σχέδιά του των ανθρακωρύχων στο Borinage άνοιξαν τη θέση τους για πολύ πιο εκλεπτυσμένα και γεμάτα συναισθήματα έργα.
                     Στο σχέδιο Sien, Sitting on a Basket, with a Girl , για παράδειγμα, ο Vincent απεικονίζει με μαεστρία την ήσυχη οικογενειακή ζωή, καθώς και μια υποκείμενη αίσθηση απελπισίας--αισθήματα που θα καθόριζαν πραγματικά τους 19 μήνες ζωής του Van Gogh με τη Sien.
                 </p>
