--- a/bio_page4.html
+++ b/bio_page4.html
@@ -51,11 +51,11 @@
                 <div class="arles-house">
                     <div class="yellow-house-img">
                         <img src="http://www.vggallery.com/painting/f_0464.jpg">
-                        <h4>Vincent's House in Arles (The Yellow House),1888</h4>
+                        <h5>Vincent's House in Arles (The Yellow House),1888</h5>
                     </div>
                     <div class="arles-atnight">
                         <img src="http://www.vggallery.com/painting/f_0467.jpg">
-                        <h4>Cafe Terrace on the Place du Forum, Arles, at Night(1888)</h4>
+                        <h5>Cafe Terrace on the Place du Forum, Arles, at Night(1888)</h5>
                     </div>
                 </div>
 
@@ -77,17 +77,17 @@
             <div class="sunflowers">
                 <div class="sunflowers-img">
                     <img src="http://www.vggallery.com/painting/f_0458.jpg">
-                    <h4>Still Life: Vase with Fifteen Sunflowers,1889</h4>
+                    <h5>Still Life: Vase with Fifteen Sunflowers,1889</h5>
                 </div>
 
                 <p>
                     Οι επόμενοι δύο μήνες θα ήταν κομβικοί και καταστροφικοί, τόσο για τον Vincent van Gogh όσο και για τον Paul Gauguin. Αρχικά, ο Βαν Γκογκ και ο Γκωγκέν τα πήγαιναν καλά μαζί, ζωγραφίζοντας στα περίχωρα της Αρλ,
-                    συζητώντας για την τέχνη τους και τις διαφορετικές τεχνικές τους. Καθώς περνούσαν οι εβδομάδες, ωστόσο, ο καιρός χειροτέρευε και το ζευγάρι αναγκάστηκε να μένει στο σπίτι όλο και πιο συχνά.Ωστόσο, η σχέση μεταξύ
-                    του Βαν Γκογκ και του Γκωγκέν επιδεινώθηκε όλο τον Δεκέμβριο. Οι έντονες διαφωνίες τους γίνονταν όλο και πιο συχνές -- «ηλεκτρικές» όπως θα τις περιέγραφε ο Βίνσεντ. Οι σχέσεις μεταξύ του ζευγαριού μειώθηκαν παράλληλα
+                    συζητώντας για την τέχνη τους και τις διαφορετικές τεχνικές τους. Καθώς περνούσαν οι εβδομάδες, ωστόσο, ο καιρός χειροτέρευε και αναγκάστηκαν να μένουν στο σπίτι όλο και πιο συχνά.Ωστόσο, η σχέση μεταξύ
+                    του Βαν Γκογκ και του Γκωγκέν επιδεινώθηκε όλο τον Δεκέμβριο. Οι έντονες διαφωνίες τους γίνονταν όλο και πιο συχνές -- «ηλεκτρικές» όπως θα τις περιέγραφε ο Βίνσεντ. Οι σχέσεις μεταξύ τους μειώθηκαν παράλληλα
                     με την κατάσταση της ψυχικής υγείας του Βίνσεντ. Στις 23 Δεκεμβρίου, ο Vincent van Gogh, σε μια παράλογη κρίση τρέλας, ακρωτηρίασε το κάτω μέρος του αριστερού του αυτιού. Έκοψε τον λοβό με ένα ξυράφι, τον τύλιξε με ύφασμα 
                     και μετά τον πήγε σε έναν οίκο ανοχής και τον παρουσίασε σε μια από τις γυναίκες εκεί. Στη συνέχεια, ο Βίνσεντ επέστρεψε στο Κίτρινο Σπίτι, όπου κατέρρευσε. Ανακαλύφθηκε από την αστυνομία και νοσηλεύτηκε στο νοσοκομείο Hôtel-Dieu στην Αρλ. 
                     Αφού έστειλε ένα τηλεγράφημα στον Theo, ο Gauguin έφυγε αμέσως για το Παρίσι, επιλέγοντας να μην επισκεφτεί τον Van Gogh στο νοσοκομείο. Ο Βαν Γκογκ και ο Γκωγκέν αργότερα αλληλογραφούσαν κατά καιρούς, αλλά δεν θα συναντιόντουσαν ποτέ ξανά.<br>
-                    Στις 7 Φεβρουαρίου, ο Βίνσεντ υπέστη άλλη μια επίθεση κατά την οποία φαντάστηκε τον εαυτό του να δηλητηριάζεται. Για άλλη μια φορά, ο Vincent μεταφέρθηκε στο νοσοκομείο Hôtel-Dieu για παρακολούθηση. Ο Βαν Γκογκ κρατήθηκε στο νοσοκομείο για δέκα ημέρες, 
+                    Στις 7 Φεβρουαρίου, ο Βίνσεντ δηλητηριάζεται. Για άλλη μια φορά, μεταφέρθηκε στο νοσοκομείο Hôtel-Dieu για παρακολούθηση. Ο Βαν Γκογκ κρατήθηκε στο νοσοκομείο για δέκα ημέρες, 
                     αλλά επέστρεψε για άλλη μια φορά στο Κίτρινο Σπίτι, προσωρινά. Μέχρι εκείνη τη στιγμή, ωστόσο, ορισμένοι από τους πολίτες της Αρλ είχαν θορυβηθεί από τη συμπεριφορά του Βίνσεντ και υπέγραψαν μια αναφορά που περιγράφει λεπτομερώς τις ανησυχίες τους. 
                     Η αναφορά υποβλήθηκε στον δήμαρχο της Αρλ και τελικά στον αρχηγό της αστυνομίας που διέταξε την επανεισαγωγή του Βαν Γκογκ στο νοσοκομείο Hôtel-Dieu. Ο Βίνσεντ παρέμεινε στο νοσοκομείο για τις επόμενες έξι εβδομάδες, αλλά του επετράπη να φύγει σε εποπτευόμενες
                     εξόδους--για να ζωγραφίσει και να βάλει τα υπάρχοντά του σε αποθήκη. Ήταν μια παραγωγική, αλλά συναισθηματικά αποθαρρυντική περίοδος για τον Βαν Γκογκ. Όπως συνέβη ένα χρόνο πριν, ο Βαν Γκογκ επέστρεψε στη ζωγραφική των ανθισμένων περιβόλων γύρω από την Αρλ. 
