--- a/bio_page_2.html
+++ b/bio_page_2.html
@@ -34,10 +34,10 @@
             <div class="farmers-plant">
                 <img src="http://www.vggallery.com/painting/f_0041.jpg" title="Farmers Planting Potatoes">
                 <p>Το 1883 ήταν άλλη μια χρονιά μετάβασης για τον Βαν Γκογκ: τόσο στην προσωπική του ζωή όσο και στον ρόλο του ως καλλιτέχνη. Ο Vincent άρχισε να πειραματίζεται με τις λαδομπογιές το 1882,
-                    αλλά μόλις το 1883 δούλευε σε αυτό το μέσο όλο και πιο συχνά. Καθώς οι δεξιότητές του στο σχέδιο και στη ζωγραφική προχωρούσαν, η σχέση του με τη Σιέν επιδεινώθηκε και οι δρόμοι τους χώρισαν τον Σεπτέμβριο.
+                    αλλά μόλις το 1883 δούλευε με αυτό το υλικό όλο και πιο συχνά. Καθώς οι δεξιότητές του στο σχέδιο και στη ζωγραφική προχωρούσαν, η σχέση του με τη Σιέν επιδεινώθηκε και οι δρόμοι τους χώρισαν τον Σεπτέμβριο.
                     Όπως και με την αποτυχία του στο The Borinage, ο Vincent περνούσε το χρόνο του αναρρώνοντας από αυτήν την αποτυχημένη σχέση σε απομόνωση. Με πολλή λύπη, ιδιαίτερα λόγω των συναισθημάτων του για τα παιδιά της Σιέν,
                     ο Βίνσεντ έφυγε από τη Χάγη στα μέσα Σεπτεμβρίου για να ταξιδέψει στο Ντρέντε, μια κάπως έρημη συνοικία στην Ολλανδία. Για τις επόμενες έξι εβδομάδες ο Βίνσεντ έζησε μια μάλλον νομαδική ζωή, μετακινούμενος σε όλη την περιοχή
-                    και ζωγραφίζοντας και ζωγραφίζοντας το απομακρυσμένο τοπίο και τους κατοίκους του.Για άλλη μια φορά, ο Vincent επέστρεψε στο σπίτι των γονιών του, τώρα στο Nuenen, στα τέλη του 1883. Καθ' όλη τη διάρκεια του επόμενου έτους, ο Vincent van Gogh
+                    και ζωγραφίζοντας το απομακρυσμένο τοπίο και τους κατοίκους του.Για άλλη μια φορά, ο Vincent επέστρεψε στο σπίτι των γονιών του, τώρα στο Nuenen, στα τέλη του 1883. Καθ' όλη τη διάρκεια του επόμενου έτους, ο Vincent van Gogh
                     συνέχισε να βελτιώνει την τέχνη του. Έκανε δεκάδες πίνακες και σχέδια κατά τη διάρκεια αυτής της περιόδου: υφαντές, κλωστήρες και άλλα πορτρέτα. Οι ντόπιοι αγρότες αποδείχτηκαν τα αγαπημένα του θέματα -- εν μέρει επειδή ο Βαν Γκογκ ένιωθε μια
                     ισχυρή συγγένεια με τους φτωχούς εργάτες και εν μέρει επειδή ήταν τόσο θαυμαστής του ζωγράφου Μιλέτ που ο ίδιος έφτιαχνε ευαίσθητους και συμπονετικούς πίνακες εργατών στα χωράφια.</p>
             </div>
